--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^5.0.1",
+    "firebase-admin": "^13.4.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
