--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
